--- a/components/backend-tests-java-springboot-cgqixzfr/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-java-springboot-cgqixzfr/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-java-springboot-cgqixzfr
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-java-springboot-cgqixzfr:cd4a0cd248c4cb18d86cd8517ab618406794d8e8@sha256:86a85cc3ba60c18cf42c61c10ea280132fa261f8aeae4db3ca1507778656a7c8
+          name: container-image
